--- a/index.html
+++ b/index.html
@@ -725,7 +725,7 @@
             }
         }
 
-        // คุมsound
+        // คุมเกม
         startGameButton.addEventListener('click', startQuiz); // คลิกปุ่ม เริ่มเกม เรียกฟังก์ชัน startQuiz
         popupNextButton.addEventListener('click', goToNextQuestion); // คลิกปุ่ม ข้อต่อไป ใน Pop-up เรียกฟังก์ชัน goToNextQuestion
         restartGameButton.addEventListener('click', startQuiz); // คลิกปุ่ม เล่นใหม่ เรียกฟังก์ชัน startQuiz
