--- a/index.html
+++ b/index.html
@@ -519,6 +519,12 @@
                 options: ["ขมิ้น", "อบเชย", "กานพลู", "ใบกระวาน"],
                 answer: "ขมิ้น",
                 explanation: "ขมิ้นเป็นเครื่องเทศหลักในอาหารอินเดีย ให้สีเหลืองสด กลิ่นหอม และมีสรรพคุณทางยา"
+            },
+            {
+                question: "test ha",
+                options: ["hs", "ho", "ha", "hm"],
+                answer: "ha",
+                explanation: "test"
             }
         ];
         //ตัวเเปรทั้งหมดในเกม
