--- a/index.html
+++ b/index.html
@@ -521,12 +521,67 @@
                 explanation: "ขมิ้นเป็นเครื่องเทศหลักในอาหารอินเดีย ให้สีเหลืองสด กลิ่นหอม และมีสรรพคุณทางยา"
             },
             {
-                question: "test ha",
-                options: ["hs", "ho", "ha", "hm"],
-                answer: "ha",
-                explanation: "test"
-            }
+                question: "ชาวเผ่าในยุคแรกเริ่มของอินเดียคือชยนเผ่าใด",
+                options: ["ชาวเบงกอล", "ชาวจักมา", "ชาวดราวิเดียน", "ชาวเปอร์เซีย"],
+                answer: "ชาวดราวิเดียน",
+                explanation: "เผ่าทราวิฑะDravida) , ดราวิเดียน (Dravidian) หรือทมิฬ (Tamil) คือชนเผ่าในยุคแรกเริ่มของอินเดีย เดิมอาศัยอยู่แถบลุ่มแม่น้ำสินธุมานานกว่า 1,500 ปี ก่อนคริสตกาล"
+            },
+            {
+                question: "นักรบ จัดอยู่ในวรรณะใด",
+                options: ["กษัตริย์", "พราหมณ์", "แพศย์", "ศูทร"],
+                answer: "กษัตริย์",
+                explanation: "หลังจากที่พวกอารยันผิวขาวได้เข้ามาในอินเดีย ก็ได้ยึดบ้านช่อง ทรัพย์สิน ของชาวทมิฬ  ทำให้เป็นทาส จนเกิดการแบ่งววรณะขึ้น โดยแบ่งวรรณะตามหน้าที่"
+            },
+            {
+                question: "ศาสนาฮินดู กลับมาเป็นที่นิยมอีกครั้งในสมัยราชวงศ์ใด?",
+                options: ["ราชวงศ์มคธ", "ราชวงศ์ปุรุ", "ราชวงศ์เมารยะ", "ราชวงศ์คุปตะ"],
+                answer: "ราชวงศ์คุปตะ",
+                explanation: "ศาสนาฮินดูที่ฟื้นฟูขึ้นใหม่นี้ เชื่อว่าพระวิษณุและพระศิวะเป็นผู้มาโปรด เป็นผู้ให้ความ"
+            },
+            {
+                question: "ศาสนาอิสลามเผยเพร่เข้าในอินเดียจากทางภาคใด?",
+                options: ["เหนือ", "ตะวันออก", "ตะวันตก", "ใต้"],
+                answer: "เหนือ",
+                explanation: "หลังการสิ้นสุดของราชวงศ์คุปตะ อินเดียแตกแยกและ อ่อนแอ ทางเหนือถูกต่างชาติรุกราน ทำให้ศาสนาอิสลาม เริ่มเผยแผ่เข้าสู่อินเดียทางเหนือ"
+            },
+            {
+                question: "ในมหากาพย์ \"มหาภารตะ\" มีทั้งหมดกี่บรรพ",
+                options: ["15", "16", "17", "18"],
+                answer: "18",
+                explanation: "มหาภารตะประกอบด้วยบรรพ (อ่านว่าบับ หรือ บับ-พะ แปลว่า ภาคหรือบท) ทั้งหมด 18 บรรพ"
+            },
+            {
+                question: "ในมหากาพย์ \"รามายณะ\" ใครคือตัวละครเอก",
+                options: ["พระราม", "หนุมาน", "ทศกัณฐ์", "นางสีดา"],
+                answer: "พระราม",
+                explanation: "พระรามตัวละครเอกของมหากาพย์รามายณะ ผู้ถูกกล่าวถึงในฐานะอวตารชาติที่ 7 ของพระวิษณุเรื่องราวเล่าเกี่ยวกับการทำศึกสงครามระหว่างฝ่ายพระรามกับฝ่ายทศกัณฐ์ เพื่อแย่งนางสีดา"
+            },
+            {
+                question: "ในศาสนาฮินดู ลัทธิไศวะ บูชาใครเป็นเทพเจ้า",
+                options: ["พระราม", "พระศิวะ", "พระสีดา", "พระวิษณุ"],
+                answer: "พระศิวะ",
+                explanation: "ลัทธิไศวะเป็นลัทธินิกายที่นับถือพระศิวะเป็นพระเป็นเจ้าหรือพรหมันซึ่งมีรูปแบบความเชื่อและการปฏิบัติแตกต่างกันไปเป็นหลายกลุ่ม"
+            },
+            {
+                question: "ปลายคริสต์ศตวรรษที่18 ประเทศใดได้เริ่มเข้ามาปกครองอินเดีย",
+                options: ["จีน", "โปรตุเกส", "อังกฤษ", "อเมริกา"],
+                answer: "อังกฤษ",
+                explanation: "ค.ศ. 1858 โดยรัฐบาลอังกฤษตั้งข้าหลวงใหญ่หรืออุปราชเป็นผู้ปกครอง ทั้งนี้ อังกฤษปกครองอินเดียโดยวิธีแบ่งแยกการปกครอง และปฏิบัติต่อผู้นับถือศาสนาฮินดูกับศาสนาอิสลามอย่างเท่าเทียมกัน"
+            },
+            {
+                question: "ผู้ที่ทรงให้สร้างทัชมาฮาลขึ้นคือใคร",
+                options: ["คีร์ ชะฮาน", "มุมตาซ มหัล", "ออรังเซพ", "ชาห์ ชะฮาน"],
+                answer: "ชาห์ ชะฮาน",
+                explanation: "จักรพรรดิชาห์ชะฮัน สร้างขึ้นเพื่อตั้งศพของพระสนมเอก มุมตาซ มหัล และเป็นที่ตั้งพระศพของจักรพรรดิชาห์ชะฮันเองเป็นอาคารฝังศพสร้างด้วยหินอ่อนสีขาวงาช้าง ตั้งอยู่บนฝั่งแม่น้ำทางใต้ของแม่น้ำยมุนา"
+            },
+            {
+                question: "หลักคำสอนที่เป็นหัวใจหลักของศาสนาพุทธคือหลักคำสอนใด?",
+                options: ["การทำความดี ละเว้นความชั่ว ทำจิตใจให้บริสุทธิ์ การปฏิบัติตามทางสายกลาง", "จงรักพระเจ้าด้วยสุดจิตสุดใจและสุดสิ้นความคิดของเจ้าจงรักเพื่อนบ้านเหมือนรักตนเอง", "เลือกสรรเฉพาะสิ่งที่ดี อันเป็นที่ยอมรับของสังคม จงทำตนให้เป็นผู้ดำรงอยู่ในศีลธรรม", "อดทน สันโดษอภัยผู้อื่น ข่มใจ ทำใจให้บริสุทธิ์ ไม่ลักขโมย อดกลั้น มีปัญญาหาทางหลุดพ้น มีสัจจะ ไม่โกรธ ทำจิตใจให้สงบ"],
+                answer: "การทำความดี ละเว้นความชั่ว ทำจิตใจให้บริสุทธิ์ การปฏิบัติตามทางสายกลาง",
+                explanation: "คำสอนสำคัญที่ถือเป็นหัวใจของ ทำจิตใจให้บริสุทธิ์ การปฏิบัติตามทางสายกลาง (มัชฌิมาปฏิปทา) อริยสัจ 4 ซึ่งเป็นการปฎิบัติเพื่อให้พ้นจากความทุกข์"
+            },
         ];
+
         //ตัวเเปรทั้งหมดในเกม
 
         //เชื่อม Element ใน HTML ให้เข้ากับตัวแปร JavaScript เพื่อให้ควบคุมได้
