--- a/index.html
+++ b/index.html
@@ -575,10 +575,10 @@
                 explanation: "จักรพรรดิชาห์ชะฮัน สร้างขึ้นเพื่อตั้งศพของพระสนมเอก มุมตาซ มหัล และเป็นที่ตั้งพระศพของจักรพรรดิชาห์ชะฮันเองเป็นอาคารฝังศพสร้างด้วยหินอ่อนสีขาวงาช้าง ตั้งอยู่บนฝั่งแม่น้ำทางใต้ของแม่น้ำยมุนา"
             },
             {
-                question: "หลักคำสอนที่เป็นหัวใจหลักของศาสนาพุทธคือหลักคำสอนใด?",
-                options: ["การทำความดี ละเว้นความชั่ว ทำจิตใจให้บริสุทธิ์ การปฏิบัติตามทางสายกลาง", "จงรักพระเจ้าด้วยสุดจิตสุดใจและสุดสิ้นความคิดของเจ้าจงรักเพื่อนบ้านเหมือนรักตนเอง", "เลือกสรรเฉพาะสิ่งที่ดี อันเป็นที่ยอมรับของสังคม จงทำตนให้เป็นผู้ดำรงอยู่ในศีลธรรม", "อดทน สันโดษอภัยผู้อื่น ข่มใจ ทำใจให้บริสุทธิ์ ไม่ลักขโมย อดกลั้น มีปัญญาหาทางหลุดพ้น มีสัจจะ ไม่โกรธ ทำจิตใจให้สงบ"],
-                answer: "การทำความดี ละเว้นความชั่ว ทำจิตใจให้บริสุทธิ์ การปฏิบัติตามทางสายกลาง",
-                explanation: "คำสอนสำคัญที่ถือเป็นหัวใจของ ทำจิตใจให้บริสุทธิ์ การปฏิบัติตามทางสายกลาง (มัชฌิมาปฏิปทา) อริยสัจ 4 ซึ่งเป็นการปฎิบัติเพื่อให้พ้นจากความทุกข์"
+                question: "ข้อใดเป็นหลักคำสอนของศาสนาพุทธ",
+                options: ["อริยสัจ 4", "หลักอาศรม 4", "การศรัทธาวันสิ้นโลก", "ชีวิตก่อนมรรตัย"],
+                answer: "อริยสัจ 4",
+                explanation: "อริยสัจ 4 เป็นหลักธรรมที่ทำให้ผู้รู้ห่างไกลจากกิเลส มี4อย่าง คือ ทุกข์ สมุทัย นิโรธ และมรรค ซึ่งถือเป็นหัวใจหลักของพุทธศาสนา"
             },
         ];
 
